force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Ready_for_PM_approval_Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Ready_for_PM_approval_Checked_Date__c</fullName>
    <label>Ready for PM approval Checked Date</label>
    <type>DateTime</type>
</CustomField>