force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Reason_for_Relocation__c.field-meta.xml
<CustomField>
    <fullName>FS_Reason_for_Relocation__c</fullName>
    <label>Reason for Relocation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closing of Store</fullName>
            </value>
            <value>
                <fullName>Low Volume</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>