force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Reason_for_Replacement_of_Damaged__c.field-meta.xml
<CustomField>
    <fullName>FS_Reason_for_Replacement_of_Damaged__c</fullName>
    <label>Reason for Replacement of Damaged/Defect</label>
    <type>TextArea</type>
</CustomField>