force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Related_Chain__c.field-meta.xml
<CustomField>
    <fullName>FS_Related_Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Chain</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Execution Plans (Related Chain)</relationshipLabel>
    <relationshipName>Execution_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>