force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Relocated_Dispenser_1_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Relocated_Dispenser_1_Serial_Number__c</fullName>
    <label>Relocated Dispenser 1 Serial Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>