force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Relocation_from_old_outlet_to_SP_is__c.field-meta.xml
<CustomField>
    <fullName>FS_Relocation_from_old_outlet_to_SP_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removal from old outlet to SP complete</label>
    <type>Checkbox</type>
</CustomField>