force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Relocation_Instruction__c.field-meta.xml
<CustomField>
    <fullName>FS_Relocation_Instruction__c</fullName>
    <label>Relocation Instruction</label>
    <type>TextArea</type>
</CustomField>