force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_relocation_new_outlet_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_relocation_new_outlet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation in new outlet complete</label>
    <type>Checkbox</type>
</CustomField>