force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Relocation_Old_Outlet_SP_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Relocation_Old_Outlet_SP_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relocation Old Outlet-SP-Complete</label>
    <type>Checkbox</type>
</CustomField>