force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Relocation_Store_Detail__c.field-meta.xml
<CustomField>
    <fullName>FS_Relocation_Store_Detail__c</fullName>
    <label>Relocation Store Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closing of Old Outlet and transfer to New Outlet</fullName>
            </value>
            <value>
                <fullName>Closing of Old Outlet and transfer to Existing Outlet with Freestyle</fullName>
            </value>
            <value>
                <fullName>Partial relocation from old outlet and transfer to new outlet</fullName>
            </value>
            <value>
                <fullName>Partial relocation from old outlet and transfer to Existing Outlet with Freestyle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>