force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Remove_Crew_Serve__c.field-meta.xml
<CustomField>
    <fullName>FS_Remove_Crew_Serve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove 8000 Series</label>
    <type>Checkbox</type>
</CustomField>