force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Replacement_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Replacement_Approval_Status__c</fullName>
    <label>Replacement Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Type_of_Replacement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>