force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Replacement_Approval_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>FS_Replacement_Approval_Status_Text__c</fullName>
    <label>Replacement Approval Status Text</label>
    <length>32</length>
    <type>Text</type>
</CustomField>