force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Requested_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Installation_Date__c</fullName>
    <label>Requested Installation Date</label>
    <type>Date</type>
</CustomField>