force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Responsible_for_Coord_IM_Activity__c.field-meta.xml
<CustomField>
    <fullName>FS_Responsible_for_Coord_IM_Activity__c</fullName>
    <label>Responsible for Coordinating IM Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>