force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Revenue_Center__c.field-meta.xml
<CustomField>
    <fullName>FS_Revenue_Center__c</fullName>
    <formula>FS_Headquarters__r.FS_Revenue_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Center</label>
    <type>Text</type>
</CustomField>