force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Execution_Plans6</relationshipName>
    <type>Lookup</type>
</CustomField>