force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Scheduled_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Scheduled_Installation_Date__c</fullName>
    <label>Install/Reconnect Date</label>
    <type>Date</type>
</CustomField>