force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Scheduled_Installation_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Scheduled_Installation_Time__c</fullName>
    <label>Install/Reconnect Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>