force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>FS_Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>