force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Self_Serve_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Dispenser__c</fullName>
    <label>9000 Series Dispenser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46100 : Freestyle GS1 Red</fullName>
            </value>
            <value>
                <fullName>46101 : Freestyle GS1 Black</fullName>
            </value>
            <value>
                <fullName>46099 : Freestyle GS1 Silver</fullName>
            </value>
            <value>
                <fullName>46127 : Freestyle GS1 Red  - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46128 : Freestyle GS1 Black  - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46126 : Freestyle GS1 Silver - Wood Crate</fullName>
            </value>
            <value>
                <fullName>46130 : Freestyle GS1 Red Ã¢â‚¬â€œ Cruise Ship</fullName>
            </value>
            <value>
                <fullName>46293 : Freestyle GS1 Silver - Cruise Ship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>