force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Self_Serve_Location_Serial_if_known__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Location_Serial_if_known__c</fullName>
    <label>9000 Series Location/Serial# (if known)</label>
    <type>TextArea</type>
</CustomField>