force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Send_to_Davaco__c.field-meta.xml
<CustomField>
    <fullName>FS_Send_to_Davaco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Davaco</label>
    <type>Checkbox</type>
</CustomField>