force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Shelf_A__c.field-meta.xml
<CustomField>
    <fullName>FS_Shelf_A__c</fullName>
    <label>Shelf A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46065 : Slant Shelf 15inch Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>