force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Shelf_B__c.field-meta.xml
<CustomField>
    <fullName>FS_Shelf_B__c</fullName>
    <label>Shelf B</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46063 : Slant Shelf 28inch Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>