force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Shelf_C__c.field-meta.xml
<CustomField>
    <fullName>FS_Shelf_C__c</fullName>
    <label>Shelf C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46064 : Slant Shelf 41inch Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>