force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Single_Tray_QTY_Case__c.field-meta.xml
<CustomField>
    <fullName>FS_Single_Tray_QTY_Case__c</fullName>
    <formula>FS_SS_Dispenser_QTY__c + FS_CS_Dispenser_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Single Tray QTY/Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>