force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Size_5__c.field-meta.xml
<CustomField>
    <fullName>FS_Size_5__c</fullName>
    <label>Size 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>