force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Soft_Ice_Kit__c.field-meta.xml
<CustomField>
    <fullName>FS_Soft_Ice_Kit__c</fullName>
    <label>Soft Ice Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46430: Soft Ice Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>