force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Soft_Ice_Kit_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Soft_Ice_Kit_QTY__c</fullName>
    <label>Soft Ice Kit QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>