force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_SP__c.field-meta.xml
<CustomField>
    <fullName>FS_SP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria for SP.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Service Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Execution Plans (SP)</relationshipLabel>
    <relationshipName>SP_Execution_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>