force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_SS_Dispenser_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_SS_Dispenser_QTY__c</fullName>
    <label>9000 Series Dispenser QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>