force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_SS_Removal_Instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_SS_Removal_Instructions__c</fullName>
    <label>9000 Series Removal Instructions</label>
    <type>TextArea</type>
</CustomField>