force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>FS_Submit_For_Approval__c</fullName>
    <label>Request for PM approval Updated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>