force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Sum_of_Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>FS_Sum_of_Days_Elapsed__c</fullName>
    <label>Sum of Days Elapsed</label>
    <summarizedField>FS_Installation__c.FS_Days_Elapsed__c</summarizedField>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Overall_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>