force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Survey_WO__c.field-meta.xml
<CustomField>
    <fullName>FS_Survey_WO__c</fullName>
    <label>Survey WO#</label>
    <length>64</length>
    <type>Text</type>
</CustomField>