force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Tall_Cup_Kit__c.field-meta.xml
<CustomField>
    <fullName>FS_Tall_Cup_Kit__c</fullName>
    <label>Tall Cup Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>141959: Tall Cup Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>