force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Total_Pump_Kits__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Pump_Kits__c</fullName>
    <description>Post Install</description>
    <label>Total Pump Kits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>