force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Total_Shelf_A__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Shelf_A__c</fullName>
    <label>Total Shelf A</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>