force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_TotalPlanned_Crew_Serve_Freestyle_Dis__c.field-meta.xml
<CustomField>
    <fullName>FS_TotalPlanned_Crew_Serve_Freestyle_Dis__c</fullName>
    <label>Total # Planned 8000 Serie Freestyle Dis</label>
    <summarizedField>FS_Installation__c.FS_Planned_CrewServe_Freestyle_Disp__c</summarizedField>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>