force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Tray_Kit__c.field-meta.xml
<CustomField>
    <fullName>FS_Tray_Kit__c</fullName>
    <label>SmartPAK Tray Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46404 : Single Tray</fullName>
            </value>
            <value>
                <fullName>46404 &amp; 46405 : Single &amp; Double Tray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>