force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Type_of_Relocation__c.field-meta.xml
<CustomField>
    <fullName>FS_Type_of_Relocation__c</fullName>
    <label>Type of Relocation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RO4Ws (Dispenser to be moved within Primary SP Territory Ã¢â‚¬â€œ SP to Store)</fullName>
            </value>
            <value>
                <fullName>RO4Ws (Dispenser to be moved outside of Primary SP Territory Ã¢â‚¬â€œ SP to Store)</fullName>
            </value>
            <value>
                <fullName>RO4Ws (Dispenser to be moved within Primary SP Territory Ã¢â‚¬â€œ Same Day)</fullName>
            </value>
            <value>
                <fullName>RO4Ws (Dispenser to be moved outside of Primary SP Territory Ã¢â‚¬â€œ Same day)</fullName>
            </value>
            <value>
                <fullName>Relocation within four walls (Store dispenser(s) on site) - 2 work orders</fullName>
            </value>
            <value>
                <fullName>Relocation within four walls (Stored off-site at SP) - 2 work orders</fullName>
            </value>
            <value>
                <fullName>Relocation within four walls (Same day for on-site work) Ã¢â‚¬â€œ 1 work order</fullName>
            </value>
            <value>
                <fullName>Disconnect Reconnect (Store dispenser(s) on site) - 2 work orders</fullName>
            </value>
            <value>
                <fullName>Disconnect Reconnect (Stored off-site at SP) - 2 work orders</fullName>
            </value>
            <value>
                <fullName>Disconnect Reconnect (Same day for on-site work) Ã¢â‚¬â€œ 1 work order</fullName>
            </value>
            <value>
                <fullName>New Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>