force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Type_of_Relocation_Text__c.field-meta.xml
<CustomField>
    <fullName>FS_Type_of_Relocation_Text__c</fullName>
    <label>Type of Relocation Text</label>
    <length>32</length>
    <type>Text</type>
</CustomField>