force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Type_of_Removal__c.field-meta.xml
<CustomField>
    <fullName>FS_Type_of_Removal__c</fullName>
    <label>Type of Removal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OOB</fullName>
            </value>
            <value>
                <fullName>Partial Removal (not replacing with legacy)</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Re-install Legacy</fullName>
            </value>
            <value>
                <fullName>Change of Ownership (New ACN)</fullName>
            </value>
            <value>
                <fullName>Store Remodel</fullName>
            </value>
            <value>
                <fullName>BK ITP Remodel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>