force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Type_of_Removal_Text__c.field-meta.xml
<CustomField>
    <fullName>FS_Type_of_Removal_Text__c</fullName>
    <label>Type of Removal Text</label>
    <length>36</length>
    <type>Text</type>
</CustomField>