force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Type_of_Replacement__c.field-meta.xml
<CustomField>
    <fullName>FS_Type_of_Replacement__c</fullName>
    <label>Type of Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Freestyle Unit(s)</fullName>
            </value>
            <value>
                <fullName>Defective Freestyle Unit(s)</fullName>
            </value>
            <value>
                <fullName>Damaged Freestyle Unit(s)-Disaster</fullName>
            </value>
            <value>
                <fullName>Reman Equipment (CCR OFFICES ONLY)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>