force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Updated_Post_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Updated_Post_Installation_Status__c</fullName>
    <label>Updated Post-Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>