force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Vacuum_Regulator__c.field-meta.xml
<CustomField>
    <fullName>FS_Vacuum_Regulator__c</fullName>
    <label>Vacuum Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Pump_Kit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46409 : Regulator Vacuum (Series 7000)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>