force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Vacuum_Regulator_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Vacuum_Regulator_QTY__c</fullName>
    <description>QTY field for Vacuum Regulator field</description>
    <label>Vacuum Regulator QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>