force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Valid_Fill__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill__c</fullName>
    <label>Valid Fill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46245 : Valid Fill Conversion Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>