force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Water_Booster__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Booster__c</fullName>
    <label>Water Booster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>43362 : Water Booster 2.2</fullName>
            </value>
            <value>
                <fullName>46282 : Water Booster 4.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>