force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Water_Booster_will_go_where__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Booster_will_go_where__c</fullName>
    <label>Water Booster will go where?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>No water booster required</fullName>
            </value>
            <value>
                <fullName>FOH â€“ Near Freestyle unit</fullName>
            </value>
            <value>
                <fullName>BOH- Near water filter system</fullName>
            </value>
            <value>
                <fullName>BOH - On top of HFCS Rack</fullName>
            </value>
            <value>
                <fullName>No change - Current location</fullName>
            </value>
            <value>
                <fullName>Unknown â€“ site assessment will determine</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>